// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sibling sync reporter correctly generates report 1`] = `
"maticzav/label-sync
This is an autogenerated report for your project.
(dry run: "false")


Hey ✌️ we synced issues in your repository. Check the changes we made:

Another Issue Title
Issue number: 5

Added basic, kind/bug."
`;

exports[`sibling sync reporter generates correct empty report 1`] = `
"maticzav/label-sync
This is an autogenerated report for your project.
(dry run: "true")


Hey ✌️ we synced issues in your repository. Check the changes we made:

"
`;
